# container_manager

./: pyproject.toml
src/container_manager/: main.py
src/container_manager/container_operation/: delete.py  deploy.py  restart.py
src/container_manager/routers/: container_api.py
