[project]
name = "container_manager"
version = "0.0.1"
authors = [
  { name="Balakrishna Maduru", email="balakrishnamaduru@gmail.com" },
]
description = "Container manager is used to deployin k8s"
dependencies = {file = ["requirements.txt"]}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"